--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@ layout: default
 
 <article class="post">
   <h1>{{ page.title }}</h1>
+  <h2>{{ page.date | date_to_string }}</h2>
 
   <span>[
     {% for tag in page.tags %}
